kubernetes/apps/song-list/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: song-list
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - song-list-app.piny940.com
      secretName: cluster-tls
    - hosts:
        - song-list-staging.piny940.com
      secretName: cluster-tls
  rules:
    - host: song-list-app.piny940.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: song-list-frontend
                port:
                  number: 4400
    - host: song-list-staging.piny940.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: song-list-frontend-staging
                port:
                  number: 4400
